<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:background="@drawable/blur_background"
    android:orientation="vertical" >

    <TextView android:text="@string/tutorial_paragraph_1"
        android:layout_width="wrap_content"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        android:layout_height="wrap_content"
        android:textStyle="bold"/>
    <TextView android:text="@string/tutorial_paragraph_2"
        android:layout_width="wrap_content"
        android:layout_marginTop="5dp"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        android:layout_height="wrap_content"
        android:textStyle="bold"/>
    <TextView android:text="@string/tutorial_paragraph_3"
        android:layout_width="wrap_content"
        android:layout_marginTop="5dp"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        android:layout_height="wrap_content"
        android:textStyle="bold"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="177dp"
        android:weightSum="1" >

        <TextView
            android:text="@string/tutorial_paragraph_4"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            android:textStyle="bold"
            android:id="@+id/textView"
            android:layout_weight="1.01" />

        <ImageView
            android:layout_width="145dp"
            android:layout_height="168dp"
            android:id="@+id/imageView2"
            android:layout_gravity="end"
            android:src="@drawable/nutritional_label" />
    </LinearLayout>

    <TextView android:text="@string/tutorial_paragraph_5"
        android:layout_marginTop="5dp"
        android:textColor="#FFFFFF"
        android:layout_width="match_parent"
        android:textSize="14sp"
        android:layout_height="wrap_content"
        android:textStyle="bold"/>

</LinearLayout>