<!--R: Not really sure what layout we want -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/title_background">
    <!-- R: Removed original padding - not sure how I feel about this.
  android:paddingLeft="@dimen/activity_horizontal_margin"
  android:paddingRight="@dimen/activity_horizontal_margin"
  android:paddingTop="@dimen/activity_vertical_margin"
  android:paddingBottom="@dimen/activity_vertical_margin" -->


    <!-- R: image view background draws the logo -->
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/gainfactorlogo"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="221dp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewQuote"
        android:text="@string/placeholder"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textIsSelectable="true"
        android:textStyle="italic"
        android:layout_marginBottom="174dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignBottom="@+id/quoteText"
        android:layout_alignParentEnd="false"
        android:layout_alignParentStart="false"
        android:id="@+id/linearLayout">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/gain_button"
            android:onClick="spawnGainCalcActivity"
            android:id="@+id/button2"
            android:background="#707070"
            android:textColor="#ffffff"
            android:textSize="10pt"
            android:textColorHighlight="#FFFFFF"
            android:layout_marginBottom="10dp" />

        <Button
            android:text="@string/favourites"
            android:onClick="spawnFavouritesActivity"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#707070"
            android:textColor="#ffffff"
            android:textSize="10pt"
            android:textColorHighlight="#FFFFFF"
            android:layout_marginBottom="10dp" />

        <Button
            android:text="@string/tutorial"
            android:onClick="spawnTutorialActivity"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#707070"
            android:textColor="#ffffff"
            android:textSize="10pt"
            android:textColorHighlight="#FFFFFF"
            android:layout_marginBottom="10dp"
            android:id="@+id/button3" />
    </LinearLayout>
</RelativeLayout>
